--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,26 @@
 <h1>Get the latest video game news</h1>
+<a href="/scrape">Scrape Articles</a>
+<hr />
+
+{{#each articles}}
+<h3>{{this.title}}</h3>
+<a href={{this.link}}>Go to Article</a>
+
+<h5>Article comments</h5>
+{{#each this.comments}}
+<div class="commentContainer">
+<p>{{this.body}}</p>
+
+    <i data-id="{{this.id}}" class="fas fa-trash trashButton" ></i>
+</div>
+{{/each}}
+
+<form action="/api/comment/{{this.id}}" method="POST">
+<label for="comment{{this.id}}">Comment:</label>
+<input type="text" name="body" id="comment{{this.id}}">
+<input type="submit" class="btn btn-success" >
+</form>
+
+<small>{{this.createdDate}}</small>
+<hr />
+{{/each}}
